[Adam] fix overflow on project list

--- a/public/stylesheets/less/list.less
+++ b/public/stylesheets/less/list.less
@@ -25,7 +25,10 @@
 
 #projectList {
 	list-style-type: none;
+  height: 480px;
 	margin: 0;
+  overflow: hidden;
+  overflow-y: scroll;
 	li {
 		border-bottom: 1px solid @grayLightest;
 		padding: (@baseLineHeight / 4) 0;
